# LeanTrader-Bot

./: .env  .env.example  .env.live.conservative.example  .env.recover  .env.template  .flake8  .gitignore  .ruffignore  .tmp_import_out.txt  .tmp_import_smoke.py  ABSOLUTE_COMPLETE_BOT.py  API_SETUP_GUIDE.md  AUTONOMOUS_TRADING_ENTITY.md  BALANCE_CHECKER.py  CI_CD_FIXES_SUMMARY.md  COMPLETE_SETUP.md  COMPLETE_SYSTEM_OVERVIEW.md  CRITICAL_FIXES.py  DEMO_RUN.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEPLOY_EVOLUTION_SYSTEM.sh  DEPLOY_FIXED_GATE_BOT.sh  DEPLOY_FULL_ULTRA_ARSENAL.sh  DEPLOY_INSTRUCTIONS.md  DEPLOY_MICRO_BOT.sh  DEPLOY_NOW.sh  DEPLOY_NOW.txt  DEPLOY_REAL_PROFIT_BOT.sh  DEPLOY_REAL_TRADING_BOT.sh  DEPLOY_ULTRA_SMART_BOT.sh  DEPLOY_VPS.md  DIRECT_DEPLOYMENT_COMMANDS.sh  DIRECT_VPS_DEPLOYMENT.sh  Dockerfile  ENHANCED_EVOLUTION_DEPLOYMENT.sh  EVOLUTION_ENGINE.py  FEATURE_AUDIT.md  FILES_TO_COPY.txt  FINAL_DEPLOYMENT_READY.md  (+317 more)
.state/: kv.json
DOCS/: GO-LIVE.md
_incoming/bundle/leantrader/: .env.example  COPILOT_PLAYBOOK.md  QUICKSTART.md  TRADING_SEQUENCES_CHECKLIST.md  pyproject.toml
_incoming/bundle/leantrader/data/keywords/: trading_ontology_v2.json
_incoming/bundle/leantrader/data/telegram/: premium.json
_incoming/bundle/leantrader/deploy/: docker-compose.full.yml
_incoming/bundle/leantrader/deploy/nginx/: nginx.conf
_incoming/bundle/leantrader/deploy/nginx/certs/: README.txt
_incoming/bundle/leantrader/notebooks/: Backtest_XAU_EUR_BTC.ipynb  Optimize_XAUUSD_Params.ipynb  Sweep_XAUUSD_Params.ipynb  WalkForward_Validation.ipynb  WalkForward_XAUUSD.ipynb  backtest_demo.ipynb
_incoming/bundle/leantrader/src/leantrader/agents/: orchestrator.py
_incoming/bundle/leantrader/src/leantrader/analytics/: attribution.py
_incoming/bundle/leantrader/src/leantrader/api/: admin_ui.py  app.py  trade_ui.py
_incoming/bundle/leantrader/src/leantrader/data/: feeds.py
_incoming/bundle/leantrader/src/leantrader/dsl/: compiler.py
_incoming/bundle/leantrader/src/leantrader/execution/: broker.py  broker_fx.py  broker_fx_mt5.py
_incoming/bundle/leantrader/src/leantrader/features/: ta.py
_incoming/bundle/leantrader/src/leantrader/learners/: curriculum.py
_incoming/bundle/leantrader/src/leantrader/live/: autotrade.py  charts.py  micromanager.py  notifier.py  runner.py  signal_service.py
_incoming/bundle/leantrader/src/leantrader/risk/: global_lock.py  news_filter.py
_incoming/bundle/leantrader/src/leantrader/sessions/: manager.py
_incoming/bundle/leantrader/src/leantrader/users/: store.py
_incoming/bundle/leantrader/tests/: test_backtest_engine.py
allocators/: ensemble.py  portfolio.py  sizing.py
analytics/: attribution.py
backup_before_ultra_20250914_182511/: ultra_scout.py
brokers/: broker_base.py  broker_ibkr.py  broker_mt5.py  broker_oanda.py
cli/: arb_exec.py  arb_scan.py  cluster_node.py  exec_plan.py  (+9 more)
(+457 files in other folders)
